correcion de responsive

--- a/scss/layout/_main-contacto.scss
+++ b/scss/layout/_main-contacto.scss
@@ -61,6 +61,7 @@
                 align-content: center;
                 padding-left: 2%;
                 padding-top: 4%;
+                flex-wrap: wrap;
                 p{
                 @include parrafos; 
                 }
