--- a/css/style.css
+++ b/css/style.css
@@ -289,7 +289,8 @@ font-family: 'Satisfy', cursive;
       flex-direction: column;
       align-content: center;
       padding-left: 2%;
-      padding-top: 4%; }
+      padding-top: 4%;
+      flex-wrap: wrap; }
       .sec3-contacto div .indicaciones-mapa p {
         font-family: "Fira Sans Condensed", sans-serif;
         color: #07003d;
@@ -406,7 +407,7 @@ font-family: 'Satisfy', cursive;
     font-size: 20px; }
   /* TITULO REGALOS EXCLUSIVOS Y PERSONALIZADOS*/
   .seccion-1 div h1 {
-    font-size: 45px; }
+    font-size: 39px; }
   .novedades {
     font-size: 35px; }
   .seccion-3 p {
@@ -462,14 +463,14 @@ font-family: 'Satisfy', cursive;
     gap: 4%; }
   /* TITULO REGALOS EXCLUSIVOS Y PERSONALIZADOS*/
   .seccion-1 div h1 {
-    font-size: 27px; }
+    font-size: 38px; }
   /* PAGINA INICIO SECCION-3 */
   .seccion-3 {
     gap: 50px;
-    padding-top: 20px; }
+    padding-top: 10px; }
   .novedades {
-    font-size: 25px;
-    padding: 50px; }
+    font-size: 34px;
+    padding: 0; }
   .seccion-3 p {
     font-size: 18px; }
   /* CIRCULO TAZA - REMERA - ALMOHADON */
@@ -533,8 +534,8 @@ font-family: 'Satisfy', cursive;
       .sec3-contacto div .indicaciones-mapa p {
         font-size: 18px; }
       .sec3-contacto div .indicaciones-mapa img {
-        height: 190px;
-        width: 190px; }
+        height: 180px;
+        width: 180px; }
   /* **************************PAGINA PRODUCTOS*/
   .sec1-productos, .sec1-fecescpeciales {
     padding-top: 1%;
@@ -575,12 +576,12 @@ font-family: 'Satisfy', cursive;
     font-size: 16px; }
   /* TITULO REGALOS EXCLUSIVOS Y PERSONALIZADOS*/
   .seccion-1 div h1 {
-    font-size: 23px; }
+    font-size: 34px; }
   /* PAGINA INICIO SECCION-3 */
   .seccion-3 {
     padding-top: 0px; }
   .novedades {
-    font-size: 21px;
+    font-size: 32px;
     padding: 0px;
     margin-bottom: 0; }
   .seccion-3 p {
@@ -590,7 +591,7 @@ font-family: 'Satisfy', cursive;
     margin-bottom: 0; }
   /* PAGINA QUIENES SOMOS SECCION-1 */
   .sec1-quienessomos div h1 {
-    font-size: 34px; }
+    font-size: 33px; }
   /* PAGINA QUIENES SOMOS SECCION-2 */
   .sec2-quienessomos div h2 {
     font-size: 36px; }
@@ -620,8 +621,8 @@ font-family: 'Satisfy', cursive;
     .sec3-contacto div .indicaciones-mapa p {
       font-size: 16px; }
     .sec3-contacto div .indicaciones-mapa img {
-      height: 180px;
-      width: 180px; }
+      height: 170px;
+      width: 170px; }
   /* *******************************PAGINA PRODUCTOS*/
   .sec1-productos div h2, .sec1-fecescpeciales div h2 {
     font-size: 34px; }
@@ -644,10 +645,10 @@ font-family: 'Satisfy', cursive;
     gap: 3%; }
   /* TITULO REGALOS EXCLUSIVOS Y PERSONALIZADOS*/
   .seccion-1 div h1 {
-    font-size: 23px; }
+    font-size: 28px; }
   /* PAGINA INICIO SECCION-3 */
   .novedades {
-    font-size: 21px;
+    font-size: 25px;
     padding: 10px; }
   .seccion-3 p {
     font-size: 14px; }
