--- a/scss/layout/_media-768.scss
+++ b/scss/layout/_media-768.scss
@@ -17,7 +17,7 @@
 .seccion-1{
     div{
         h1{
-            font-size: 27px;
+            font-size: 38px;
         
         } 
     }
@@ -25,11 +25,11 @@
 /* PAGINA INICIO SECCION-3 */
 .seccion-3 { 
     gap: 50px;
-    padding-top: 20px;
+    padding-top: 10px;
     } 
     .novedades{
-            font-size: 25px;
-            padding: 50px;
+            font-size: 34px;
+            padding: 0;
     }
         .seccion-3 p{
             font-size: 18px;  
@@ -122,7 +122,7 @@
                             font-size: 18px;
                         }
                         img{
-                            @include medidas (190px,190px);
+                            @include medidas (180px,180px);
                         }
                     }     
             }
