--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ font-family: 'Satisfy', cursive;
   /* PAGINA INICIO SECCION-3 */
   .seccion-3 {
     gap: 50px;
-    padding-top: 10px; }
+    padding: 20px; }
   .novedades {
     font-size: 34px;
     padding: 0; }
