--- a/scss/layout/_media-768.scss
+++ b/scss/layout/_media-768.scss
@@ -25,7 +25,7 @@
 /* PAGINA INICIO SECCION-3 */
 .seccion-3 { 
     gap: 50px;
-    padding-top: 10px;
+    padding: 20px;
     } 
     .novedades{
             font-size: 34px;
