--- a/scss/layout/_media-1024.scss
+++ b/scss/layout/_media-1024.scss
@@ -19,6 +19,9 @@
         .seccion-3 p{
             font-size: 22px;  
         }
+        .btn{
+            font-size: 22px;
+        }
 /* *******************************PAGINA INICIO QUINES SOMOS*/
 /***** sector 1 ******/
 .sec1-quienessomos{
