--- a/scss/layout/_media-425.scss
+++ b/scss/layout/_media-425.scss
@@ -14,13 +14,14 @@
     /* PAGINA INICIO SECCION-3 */
     .seccion-3 { 
         padding-top: 0px;
+        gap: 20px;
     }
     .novedades{
             font-size: 32px;
             padding: 0px;
             margin-bottom: 0;
     } 
-    .seccion-3 p{
+    .btn{
         font-size: 16px;  
     }
 .art-inicio{
