--- a/css/style.css
+++ b/css/style.css
@@ -112,11 +112,10 @@ font-family: 'Satisfy', cursive;
   font-size: 40px;
   font-weight: bolder; }
 
-/* CIRCULO TAZA - REMERA - ALMOHADON */
+/*seccion 3*/
 .seccion-3 img {
-  height: 400px;
-  width: 400px;
-  border-radius: 50%;
+  height: 800px;
+  width: 900px;
   border-style: solid;
   border-color: cornflowerblue;
   border-width: 3px; }
@@ -131,6 +130,19 @@ font-family: 'Satisfy', cursive;
 
 .carousel-item {
   transition: none; }
+
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #88d0f1;
+  font-family: "Fira Sans Condensed", sans-serif;
+  color: #07003d;
+  font-size: 25px; }
+
+.btn:hover {
+  background-color: #f5b2df;
+  color: #14146b; }
 
 /***** sector 1 ******/
 .sec1-quienessomos {
@@ -412,6 +424,8 @@ font-family: 'Satisfy', cursive;
     font-size: 35px; }
   .seccion-3 p {
     font-size: 22px; }
+  .btn {
+    font-size: 22px; }
   /* *******************************PAGINA INICIO QUINES SOMOS*/
   /***** sector 1 ******/
   .sec1-quienessomos {
@@ -471,13 +485,13 @@ font-family: 'Satisfy', cursive;
   .novedades {
     font-size: 34px;
     padding: 0; }
-  .seccion-3 p {
-    font-size: 18px; }
-  /* CIRCULO TAZA - REMERA - ALMOHADON */
+  /*seccion 3 */
   .seccion-3 img {
     height: 300px;
     width: 300px;
     border-width: 2px; }
+  .btn {
+    font-size: 18px; }
   /* *******************************PAGINA INICIO QUINES SOMOS*/
   .sec1-quienessomos {
     justify-content: center;
@@ -579,12 +593,13 @@ font-family: 'Satisfy', cursive;
     font-size: 34px; }
   /* PAGINA INICIO SECCION-3 */
   .seccion-3 {
-    padding-top: 0px; }
+    padding-top: 0px;
+    gap: 20px; }
   .novedades {
     font-size: 32px;
     padding: 0px;
     margin-bottom: 0; }
-  .seccion-3 p {
+  .btn {
     font-size: 16px; }
   .art-inicio {
     padding-bottom: 0;
@@ -650,7 +665,7 @@ font-family: 'Satisfy', cursive;
   .novedades {
     font-size: 25px;
     padding: 10px; }
-  .seccion-3 p {
+  .btn {
     font-size: 14px; }
   .seccion-3 {
     align-items: center;
